# dx

./: ANTI_PATTERNS.md  DX_LAWS.md  OUTPUT_LAYOUT.md  PROJECT_CONTEXT.md  README.md  ROADMAP.md  pyproject.toml
docs/: PROJECT_CONTEXT.md  README.md  ROADMAP.md
docs/learning-system/: EXPLANATION_PATTERNS.md  PROMPT_GUIDELINES.md
src/dx/: cli.py
src/dx/commands/: reset.py  rm.py  run.py  run_exec.py  run_prompts.py  stop.py  supported.py
src/dx/commands/dockerfile/: command.py
src/dx/commands/run/: command.py  exec.py  prompts.py
src/dx/config/: images.py
src/dx/ui/: output.py  prompt.py
